refactor: Table, Column
