# crates/server/src/services/sharing.rs
@@ -1,6 +1,6 @@
 use bytes::Bytes;
 
-use unitycatalog_common::models::tables::v1::{DataSourceFormat, TableInfo};
+use unitycatalog_common::models::tables::v1::{DataSourceFormat, Table};
 use unitycatalog_common::{ResourceIdent, ResourceName, Share};
 use unitycatalog_sharing_client::models::sharing::v1::*;
 
@@ -47,7 +47,7 @@ impl<T: ResourceStore> SharingExt for T {
             return Err(Error::NotFound);
         };
         let table_ident = ResourceIdent::table(ResourceName::new(table_object.name.split(".")));
-        let table_info: TableInfo = self.get(&table_ident).await?.0.try_into()?;
+        let table_info: Table = self.get(&table_ident).await?.0.try_into()?;
         let location = table_info.storage_location.ok_or(Error::NotFound)?;
         Ok(StorageLocationUrl::parse(&location)?)
     }
